# clipforge

./: .gitignore  README.md  bootstrap.sh  database.py  discover.py  downloader.py  kick_api.py  log.py  pyproject.toml  schemas.py  seed.py  setup_structure.sh  twitch_api.py
archives/funny-streamers/2026-02-20/kick_clip_01KD1EBCKP66FT8G2B7TJ4F8F6/: README.md  metadata.json  post_copy.json
archives/funny-streamers/2026-02-20/kick_clip_01KD1EGBKWGWB6REGPYAY48A9D/: README.md  metadata.json  post_copy.json
archives/funny-streamers/2026-02-20/kick_clip_01KHV5HS6SBF1BFJKF7GC88ZR1/: README.md  metadata.json  post_copy.json
archives/funny-streamers/2026-02-20/kick_clip_01KHVDJ6P8G7SB2ZB9BMPAW52H/: README.md  metadata.json  post_copy.json
archives/funny-streamers/2026-02-20/kick_clip_01KHVDR0MSXDQAH74EJMVSHZZF/: README.md  metadata.json  post_copy.json
archives/funny-streamers/2026-02-20/kick_clip_01KHVEFKTW5KMCNJZGKC2ZRZSK/: README.md  metadata.json  post_copy.json
archives/funny-streamers/2026-02-20/kick_clip_01KHVETTTEN7C9M7N8YKFXMWQ0/: README.md  metadata.json  post_copy.json
src/: archive_outputs.py  cleanup.py  config.py  run.py  seed.py  test_m2.py  test_m3.py  test_m4.py  test_m5.py  test_run.py
src/db/: database.py
src/decide/: decider.py
src/discovery/: discover.py  kick_api.py  twitch_api.py
src/download/: downloader.py
src/moderation/: content_mod.py
src/package/: packager.py
src/render/: diarize.py  music_mixer.py  renderer.py
src/transcribe/: transcriber.py
src/utils/: http.py
(+9 files in other folders)
