[project]
name = "clipforge"
version = "0.1.0"
description = "Automated clip-to-shorts pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
transcribe = ["faster-whisper>=1.0"]
